[gd_scene load_steps=7 format=3 uid="uid://20on7avfx0a2"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_yx32k"]
[ext_resource type="Texture2D" uid="uid://b7p6ecymowgi1" path="res://graphics/bg.jpg" id="2_yw8u3"]
[ext_resource type="Script" path="res://scripts/KeybindEditButton.gd" id="3_hiu6m"]
[ext_resource type="Script" path="res://scripts/HttpImages.gd" id="4_p23jj"]
[ext_resource type="Script" path="res://scenes/levels/LoadImageFromUrl.gd" id="5_gvfne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwkbl"]
bg_color = Color(0.0352941, 0.262745, 0.435294, 0.639216)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yx32k")

[node name="BGTexture" type="Node2D" parent="."]
scale = Vector2(0.35, 0.35)

[node name="TextureRect" type="TextureRect" parent="BGTexture"]
offset_right = 3369.0
offset_bottom = 2246.0
texture = ExtResource("2_yw8u3")
stretch_mode = 4

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 427.0
offset_right = 693.0
offset_bottom = 556.0
text = "Start
"

[node name="StartLevel2" type="Button" parent="."]
layout_mode = 0
offset_left = 742.0
offset_top = 427.0
offset_right = 961.0
offset_bottom = 556.0
text = "Start hockey
"

[node name="PlayerCount" type="ItemList" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 334.0
offset_right = 431.0
offset_bottom = 423.0
item_count = 3
item_0/text = "2"
item_1/text = "3"
item_2/text = "4"

[node name="PlayerControls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 157.0
offset_right = 805.0
offset_bottom = 335.0

[node name="Button1" type="Button" parent="PlayerControls"]
visible = false
layout_mode = 2
text = "Player 1 Controls"

[node name="Label1" type="Label" parent="PlayerControls/Button1"]
layout_mode = 0
offset_left = -110.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 25.0

[node name="Name1" type="Label" parent="PlayerControls/Button1"]
layout_mode = 0
offset_left = -229.0
offset_top = 2.0
offset_right = -126.0
offset_bottom = 25.0

[node name="Button2" type="Button" parent="PlayerControls"]
visible = false
layout_mode = 2
text = "Player 2 Controls"

[node name="Label2" type="Label" parent="PlayerControls/Button2"]
layout_mode = 0
offset_left = -110.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 25.0

[node name="Name2" type="Label" parent="PlayerControls/Button2"]
layout_mode = 0
offset_left = -229.0
offset_top = 2.0
offset_right = -126.0
offset_bottom = 25.0

[node name="Button3" type="Button" parent="PlayerControls"]
visible = false
layout_mode = 2
text = "Player 3 Controls"

[node name="Label3" type="Label" parent="PlayerControls/Button3"]
layout_mode = 0
offset_left = -110.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 25.0

[node name="Name3" type="Label" parent="PlayerControls/Button3"]
layout_mode = 0
offset_left = -229.0
offset_top = 2.0
offset_right = -126.0
offset_bottom = 25.0

[node name="Button4" type="Button" parent="PlayerControls"]
visible = false
layout_mode = 2
text = "Player 4 Controls"

[node name="Label4" type="Label" parent="PlayerControls/Button4"]
layout_mode = 0
offset_left = -110.0
offset_top = 2.0
offset_right = -7.0
offset_bottom = 25.0

[node name="Name4" type="Label" parent="PlayerControls/Button4"]
layout_mode = 0
offset_left = -229.0
offset_top = 2.0
offset_right = -126.0
offset_bottom = 25.0

[node name="ItemList" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_left = 817.0
offset_top = 157.0
offset_right = 981.0
offset_bottom = 304.0
allow_reselect = true
item_count = 5
item_0/text = "WASD"
item_1/text = "Arrows"
item_2/text = "Controller 1"
item_3/text = "Controller 2"
item_4/text = "IJKL"

[node name="PlayerName" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = 88.0
offset_right = 805.0
offset_bottom = 129.0
placeholder_text = "Player name"

[node name="Label" type="Label" parent="PlayerName"]
layout_mode = 0
offset_left = -126.0
offset_top = 6.0
offset_right = -11.0
offset_bottom = 47.0
text = "Player  name:"

[node name="PlayerCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 369.0
offset_right = 366.0
offset_bottom = 457.0
text = "Player count:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
visible = false
layout_mode = 0
offset_left = 987.0
offset_top = 157.0
offset_right = 1088.0
offset_bottom = 301.0

[node name="LabelColorPicker" type="Label" parent="ColorPickerButton"]
layout_mode = 0
offset_left = 6.0
offset_top = -25.0
offset_right = 46.0
offset_bottom = -2.0
text = "Select color"

[node name="ColorP1" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = 157.0
offset_right = 621.0
offset_bottom = 188.0

[node name="ColorP2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = 192.0
offset_right = 621.0
offset_bottom = 223.0

[node name="ColorP3" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = 227.0
offset_right = 621.0
offset_bottom = 258.0

[node name="ColorP4" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = 262.0
offset_right = 621.0
offset_bottom = 293.0

[node name="ButtonFace" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 987.0
offset_top = 349.0
offset_right = 1082.0
offset_bottom = 389.0
text = "Pick face"

[node name="PopupMenu" type="PopupMenu" parent="."]
mode = 2
initial_position = 2

[node name="PlayerImages" type="Node2D" parent="."]
position = Vector2(384.639, 172.379)

[node name="playerImage1" type="Sprite2D" parent="PlayerImages"]
position = Vector2(403.361, -0.378906)
scale = Vector2(0.360173, 0.356536)
region_enabled = true
region_rect = Rect2(10, 35, 80, 80)

[node name="playerImage2" type="Sprite2D" parent="PlayerImages"]
position = Vector2(403.361, 35.6211)
scale = Vector2(0.360173, 0.356536)
region_enabled = true
region_rect = Rect2(10, 35, 80, 80)

[node name="playerImage3" type="Sprite2D" parent="PlayerImages"]
position = Vector2(403.361, 70.6211)
scale = Vector2(0.360173, 0.356536)
region_enabled = true
region_rect = Rect2(10, 35, 80, 80)

[node name="playerImage4" type="Sprite2D" parent="PlayerImages"]
position = Vector2(403.361, 104.621)
scale = Vector2(0.360173, 0.356536)
region_enabled = true
region_rect = Rect2(10, 35, 80, 80)

[node name="icewallCheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 553.0
offset_top = 369.0
offset_right = 691.0
offset_bottom = 400.0
button_pressed = true
text = "Enable icewall"

[node name="powerupsCheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 742.0
offset_top = 369.0
offset_right = 880.0
offset_bottom = 400.0
button_pressed = true
text = "Enable powerups"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 63.0
offset_right = 197.0
offset_bottom = 167.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Bounciness"

[node name="bounceSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="maxSpeedText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "max speed (550)"

[node name="torqueText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "torque (1200)"

[node name="burstPowerText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "burstpower (1200)"

[node name="burstCD" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "burstCD (3)"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "burst time (0,05s - 1s)"

[node name="burstTimeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 5.0
value = 15.0

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "trail length (0 - 500)"

[node name="trailLengthSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 500.0
value = 30.0

[node name="EditControlsPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 369.0
offset_top = 131.0
offset_right = 786.0
offset_bottom = 518.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pwkbl")

[node name="HBoxContainer" type="HBoxContainer" parent="EditControlsPanel"]
layout_mode = 0
offset_right = 404.0
offset_bottom = 387.0

[node name="VBoxContainer" type="VBoxContainer" parent="EditControlsPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="EditControlsPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="EditControlsPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="EditControlsPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="EditControlsPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Down"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="EditControlsPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Speedburst"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="EditControlsPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="left" type="Button" parent="EditControlsPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_hiu6m")

[node name="right" type="Button" parent="EditControlsPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_hiu6m")

[node name="up" type="Button" parent="EditControlsPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_hiu6m")

[node name="down" type="Button" parent="EditControlsPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_hiu6m")

[node name="speedburst" type="Button" parent="EditControlsPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
script = ExtResource("3_hiu6m")

[node name="HBoxContainer2" type="HBoxContainer" parent="EditControlsPanel"]
layout_mode = 0
offset_top = 276.0
offset_right = 416.0
offset_bottom = 387.0

[node name="EditControlsList" type="ItemList" parent="EditControlsPanel/HBoxContainer2"]
custom_minimum_size = Vector2(415, 0)
layout_mode = 2
item_count = 5
item_0/text = "WASD"
item_1/text = "Arrows"
item_2/text = "Controller1"
item_3/text = "Controller 2"
item_4/text = "IJKL"

[node name="EditControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 817.0
offset_top = 92.0
offset_right = 981.0
offset_bottom = 131.0
text = "Edit controls"

[node name="HttpImages" type="Node2D" parent="."]
script = ExtResource("4_p23jj")

[node name="LoadImagesFromWebButton" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 18.0
offset_right = 264.0
offset_bottom = 49.0
text = "Load face images from web"

[node name="LoadImageFromUrl" type="Button" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 18.0
offset_right = 538.0
offset_bottom = 49.0
text = "Load imge from url:"
script = ExtResource("5_gvfne")

[node name="ImageUrl" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 553.0
offset_top = 18.0
offset_right = 981.0
offset_bottom = 49.0
placeholder_text = "Image url"

[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="StartLevel2" to="." method="_on_start_level_2_button_down"]
[connection signal="item_selected" from="PlayerCount" to="." method="_on_player_count_item_selected"]
[connection signal="button_down" from="PlayerControls/Button1" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="PlayerControls/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="PlayerControls/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="PlayerControls/Button4" to="." method="_on_button_4_button_down"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="text_changed" from="PlayerName" to="." method="_on_player_name_text_changed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="button_down" from="ButtonFace" to="." method="_on_button_face_button_down"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="toggled" from="EditControlsPanel/HBoxContainer/VBoxContainer2/left" to="EditControlsPanel/HBoxContainer/VBoxContainer2/left" method="_on_toggled"]
[connection signal="toggled" from="EditControlsPanel/HBoxContainer/VBoxContainer2/right" to="EditControlsPanel/HBoxContainer/VBoxContainer2/right" method="_on_toggled"]
[connection signal="toggled" from="EditControlsPanel/HBoxContainer/VBoxContainer2/up" to="EditControlsPanel/HBoxContainer/VBoxContainer2/up" method="_on_toggled"]
[connection signal="toggled" from="EditControlsPanel/HBoxContainer/VBoxContainer2/down" to="EditControlsPanel/HBoxContainer/VBoxContainer2/down" method="_on_toggled"]
[connection signal="toggled" from="EditControlsPanel/HBoxContainer/VBoxContainer2/speedburst" to="EditControlsPanel/HBoxContainer/VBoxContainer2/speedburst" method="_on_toggled"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="." method="_on_edit_controls_list_item_selected"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="EditControlsPanel/HBoxContainer/VBoxContainer2/left" method="_on_edit_controls_list_item_selected"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="EditControlsPanel/HBoxContainer/VBoxContainer2/right" method="_on_edit_controls_list_item_selected"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="EditControlsPanel/HBoxContainer/VBoxContainer2/up" method="_on_edit_controls_list_item_selected"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="EditControlsPanel/HBoxContainer/VBoxContainer2/down" method="_on_edit_controls_list_item_selected"]
[connection signal="item_selected" from="EditControlsPanel/HBoxContainer2/EditControlsList" to="EditControlsPanel/HBoxContainer/VBoxContainer2/speedburst" method="_on_edit_controls_list_item_selected"]
[connection signal="button_down" from="EditControlsButton" to="." method="_on_edit_controls_button_button_down"]
[connection signal="button_down" from="LoadImagesFromWebButton" to="HttpImages" method="_on_load_images_from_web_button_button_down"]
[connection signal="button_down" from="LoadImageFromUrl" to="LoadImageFromUrl" method="_on_button_down"]
